<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">นิยายเด็กดี Notify for non-member</string>
    <string name="menu_settings">เพิ่มเติม</string>
    <string name="title_activity_main">หน้าหลัก</string>
    <string name="add">เพิ่ม</string>
    <string name="cancel">ยกเลิก</string>
    <string name="name">ชื่อเรือง</string>
    <string name="thname">ชื่อ</string>
    <string name="show">แสดง</string>
    <string name="url">URL</string>
    <string name="chapter">ตอนที่</string>
    <string name="last_chapter">ชื่อตอนล่าสุด</string>
    <string name="x">o</string>
    <string name="textview">TextView</string>
    <string name="plus">+</string>
    <string name="edit">แก้ไข</string>
    <string name="dec">ลด</string>
    <string name="delete">ลบ</string>
    <string name="addcp">เพิ่ม</string>
    <string name="refresh">เรียกซ้ำ</string>
    <string name="next">next</string>
    <string name="read">อ่านแล้ว เตือนถ้าชื่อตอนเปลี่ยน</string>
    <string name="open">เปิดอ่าน จาก APP แบบเก่า</string>
    <string name="chapter_title">ชื่อตอน</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_setting">ตั่งค่า</string>
    <string name="save">บันทึก</string>
    <string name="title_activity_fav_add">Fav_add</string>
    <string name="title_activity_main_layout">MainLayout</string>
    <string name="title_activity_find">Find</string>
    <string name="login">login</string>
    <string name="image">image</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="list">รายการ</string>
    <string name="settings">ตั่งค่า</string>
    <string name="search">ค้นหา</string>
    <string name="back">กลับ</string>
    <string name="setting">ตั่งค่า</string>
    <string name="title_activity_seaech">SeaechActivity</string>
    <string name="groupchoose">เลือกหมวด</string>
    <string name="sortchoose">เรียงตาม</string>
    <string name="statuschoose">สถานะ</string>
    <string name="typechoose">เลือกประเภท</string>
    <string name="submenuchoose">เลือกหมวดย่อย</string>
    <string name="title_activity_search_name">SearchNameActivity</string>
    <string name="notwantsearchtext">คำที่ไม่ต้องการค้นหา</string>
    <string name="storyname">ชื่อเรื่อง</string>
    <string name="authorname">ชื่อผู้แต่ง</string>
    <string name="abstract1">เรื่องย่อ</string>
    <string name="title_activity_dekdee_browser">DekdeeBrowserActivity</string>
    <string name="openbrower">เปิดโดยใช้ Browser</string>
    <string name="speak">อ่านออกเสียง(TTS)</string>
    <string name="title_activity_chapter_list">ChapterListActivity</string>
    <string name="chapterlist">รายการตอนทั้งหมด</string>
    <string name="title_activity_flow">FlowActivity</string>
    <string name="title_activity_web_notify">update แบบประหยัด</string>
    <string name="top">บนสุด</string>
    <string name="botton">ล่างสุด</string>
    <string name="crash_toast_text">เกิดข้อผิดพลาดขึ้น, ข้อผิดพลาดได้ถูกส่งให้ผู้พํฒนาแล้ว แนะนำเพิ่มเติมติดต่อมาทาง
        mail ใน ตั่งค่าหรือใน store ได้นะครับ.
    </string>
    <string name="story">เนื้อเรื่อง</string>
    <string name="comment">ความคิดเห็น</string>
    <string name="postcomment">แสดงความคิดเห็น</string>
    <string name="title_activity_tts">TTSActivity</string>
    <string name="title_activity_flow2">Flow2</string>
    <string name="scrolldown">เลื่อนลง</string>
    <string name="title_activity_text_read">TextReadActivity</string>
    <string name="textmode">เปิดอ่านด้วย App</string>
    <string name="TTS">อ่านออกเสียง</string>
    <string name="lightlevel">ปรับแสง</string>
    <string name="inctext">เพิ่มขนาด</string>
    <string name="dectext">ลดขนาดตัวอักษร</string>
    <string name="rollsc">หมุนหน้าจอ</string>
    <string name="title_activity_flow3">Flow3</string>
    <string name="flow31">สามารถเลื่อนขึ้นลงหน้าจอได้โดยการกดปุ่มเพิ่ม-ลดเสียง</string>
    <string name="flow32">"กด menu เพื่อรับความสามารถในการเลื่อนไปยังส่วนต่าง ๆ เพิ่อ-ลดขนาดตัวอักษร อ่านออกเสียง "
    </string>
    <string name="flow33">สามารถเปลี่ยนสีตัวอักษรและพื้นหลังได้ในหน้าตั้งค่า</string>
    <string name="title_activity_long_read">LongRead</string>
    <string name="longread">อ่านแบบหลายตอนต่อเนื่อง</string>
    <string name="startcp">เริ่มจากตอน</string>
    <string name="endcp">ถึงตอนที่(ไม่ต้องใส่ก็ได้)</string>
    <string name="ok">ตกลง</string>
    <string name="exit">ออก</string>
    <string name="chooseColor">เลือกสี App</string>
    <string name="wiTextColor">เลือกสีตัวอักษร</string>
    <string name="orginal">ดั่งเดิม</string>
    <string name="black">ดำ</string>
    <string name="white">ขาว</string>
    <string name="blue">ฟ้า</string>
    <string name="wi_blue">น้ำเงิน</string>
    <string name="chBgColor">เลือกสีพื้นหลัง</string>
    <string name="oldrose">โอรส (old rose)</string>
    <string name="orange">ส้ม</string>
    <string name="green">เขียว</string>
    <string name="pink">ชมพู</string>
    <string name="fuchsia">บายเย็น</string>
    <string name="siver">เงิน</string>
    <string name="glay">เทา</string>
    <string name="yellow">เหลือง</string>
    <string name="selectScRol">เลือกแนวหน้าจอ</string>
    <string name="notifyCheck">แจ้งเตือนการอัพเดต</string>
    <string name="autoAdd">เพิ่มตอนอัตโนมัติหลังอ่านจบ</string>
    <string name="imageDisplay">แสดงรูป ในหน้าเว็บ</string>
    <string name="startNotifyTime">เวลาที่เริ่มเตือน</string>
    <string name="newcprange">เลือกช่วงตอนใหม่</string>
    <string name="newlongread">อ่านหลายตอน แบบใหม่</string>
    <string name="fastmode">อ่านแบบเร็ว</string>
    <string name="NewWebFind">ค้นหาด้วยเว็บ</string>
    <string name="next_cp">ตอนถัดไป</string>
    <string name="retry">ลองใหม่</string>
    <string name="first_add_main"><![CDATA[<big><big>โปรดเพิ่มนิยายเรื่องแรก
(กดเครื่องหมายบวกสีเขียว
แล้วเลือกวิธีการเพิ่มนิยาย)</big></big>]]></string>
    <string name="wait_for_new">ยังไม่มีตอนปัจจุบัน รอตอนใหม่</string>
    <string name="connection_error">การเชื่อมต่อมีปัญหา กรุณาปรับปรุงการเชื่อมต่อ แล้วลองใหม่</string>
    <string name="no_fav_update"><![CDATA[<big><big>ไม่พบนิยายอัพเดทในรายการ Favorite Writer
คุณสามารถเพิ่มนิยายเรื่องแรก
(กดเครื่องหมายบวกสีเขียว
เพื่อเลือกวิธีการเพิ่มนิยาย)</big></big>]]></string>
    <string name="switchmode">สลับโหมด</string>
</resources>