<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/open"
        android:title="@string/open"/>
    <item
        android:id="@+id/openweb"
        android:title="@string/openbrower" />
    <item android:id="@+id/tts" android:title="@string/speak"></item><item
        android:id="@+id/red"
        android:title="@string/read"/><item android:id="@+id/chapterlist" android:title="@string/chapterlist"></item>
    <item
        android:id="@+id/edit"
        android:title="@string/edit"/>
    <item
        android:id="@+id/addcp"
        android:title="@string/addcp"/>
    <item
        android:id="@+id/dec"
        android:title="@string/dec"/>
    <item
        android:id="@+id/delete"
        android:title="@string/delete"/>
    
    

</menu>