<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button00"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:text="@string/chooseColor"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        android:id="@+id/Button01"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button00"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/bg_titlebar_blue"
        android:text="@string/oldrose"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/Button02"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button01"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/bg_titlebar_glay"
        android:text="@string/glay"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/Button03"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button02"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/bg_titlebar_fuchsia"
        android:text="@string/pink"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/Button05"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button03"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/bg_titlebar_green"
        android:text="@string/green"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/Button04"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button05"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/bg_titlebar_pink"
        android:text="@string/fuchsia"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/Button06"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button04"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/bg_titlebar_siver"
        android:text="@string/siver"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/Button07"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button06"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/bg_titlebar_yellow"
        android:text="@string/orange"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/Button08"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button07"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/bg_titlebar_orange"
        android:text="@string/yellow"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_below="@+id/textView1"/>

    <Button
        android:id="@+id/Button00"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/bg_titlebar"
        android:text="@string/blue"
        android:textColor="@color/white"/>

</RelativeLayout>