<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".Flow3">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginLeft="21dp"
        android:layout_toRightOf="@+id/imageView1"
        android:background="@color/gray"
        android:text="@string/flow31"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/black"
        android:contentDescription="@string/image"
        android:src="@android:drawable/arrow_down_float"/>


    <ImageView
        android:id="@+id/ImageView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/image"
        android:src="@drawable/menu"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ImageView01"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@color/gray"
        android:text="@string/flow32"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/black"
        android:contentDescription="@string/image"
        android:src="@drawable/navigation_back"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="14dp"
        android:background="@color/gray"
        android:text="@string/flow33"
        android:textColor="@color/blue"/>

</RelativeLayout>