<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".Flow3">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        android:contentDescription="@string/image"
        android:src="@android:drawable/arrow_down_float"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="31dp"
        android:layout_marginLeft="40dp"
        android:background="@color/gray"
        android:text="@string/flow31"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/ImageView01"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginRight="52dp"
        android:background="@color/black"
        android:contentDescription="@string/image"
        android:src="@android:drawable/arrow_down_float"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView1"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_marginBottom="31dp"
        android:layout_marginLeft="20dp"
        android:background="@color/gray"
        android:text="@string/flow32"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="14dp"
        android:contentDescription="@string/image"
        android:src="@drawable/menu"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/textView1"
        android:layout_marginLeft="26dp"
        android:background="@color/gray"
        android:gravity="center"
        android:text="@string/flow33"
        android:textColor="@color/blue"/>

</RelativeLayout>